fix footer and transparentize card in dark mode

--- a/src/components/Extras/Card/Card.module.css
+++ b/src/components/Extras/Card/Card.module.css
@@ -31,9 +31,14 @@
   flex: 1 1 auto;
 }
 
+[data-theme="dark"] .card {
+  background: color-mix(in srgb, var(--ifm-card-background-color) 40%, transparent);
+}
+
 [data-theme="light"] .card[href]:hover {
   border-color: var(--sw-link-color);
 }
+
 [data-theme="dark"] .card[href]:hover {
   border-color: transparent;
   animation:
