--- a/src/css/_signalwire.scss
+++ b/src/css/_signalwire.scss
@@ -84,7 +84,7 @@ This includes gradients for Navbar and links.
   transition-timing-function: var(--ifm-transition-timing-default);
 }
 
-.footer--dark {
+[data-theme="dark"] .footer {
   background: none;
   margin-top: 40px;
 }
